<?xml version="1.0"?>
<package>
  <name>sciroc_msgs</name>
  <version>0.1.0</version>
  <description>The sciroc_msgs package</description>
  
  <maintainer email="gianluca.bardaro@open.ac.uk">Gianluca Bardaro</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
